Stop calendar icon being cut off and give page content min height

--- a/scss/components/_page.scss
+++ b/scss/components/_page.scss
@@ -42,6 +42,7 @@
 	&-content {
 		border-top: 1px solid $iron;
 		margin-top: -1px;
+        min-height: ($baseline * 24); //Stop page balance looking wrong if page has very little content
 
 		&__main-content {
 			overflow: visible;
